ocp-templates/edge-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: edge-service
  app: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    app: edge-service
    deploymentconfig: edge-dc
  strategy:
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        app: edge-service
        deploymentconfig: edge-dc
    spec:
      containers:
        - name: envoy-edge
          args:
            - '-c'
            - /etc/envoy-config/config.yaml
            - '-l'
            - debug
            - '--service-cluster'
            - master-service
            - '--service-node'
            - master-service
            - '--log-format'
            - '[METADATA][%Y-%m-%d %T.%e][%t][%l][%n] %v'
          command:
            - /usr/local/bin/envoy
          image: 'envoyproxy/envoy:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 9901
              name: envoy-admin
              protocol: TCP
            - containerPort: 8080
              name: envoy-web
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/envoy-config/
              name: edge-config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: edge-config-volume
          configMap:
            name: edge-proxy-config
            defaultMode: 420
            items:
              - key: edge-envoy-config
                path: config.yaml
  triggers:
  - type: ConfigChange
