ocp-templates/master-envoy-cfg.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: master-sidecar-config
  labels:
    app: master-service
data:
  master-envoy-config: |-
    ---
    admin:
      access_log_path: "/tmp/admin_access.log"
      address: 
        socket_address: 
          address: "127.0.0.1"
          port_value: 9901
    static_resources:
      listeners:
        -
          name: "master-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 9080
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "ingress"
                    codec_type: "AUTO"
                    route_config:
                      name: "master-svc-http-route"
                      virtual_hosts:
                        -
                          name: "master-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "master"
                    http_filters:
                      -
                        name: "envoy.router"
        -
          name: "service-a-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8180
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "egress"
                    codec_type: "AUTO"
                    route_config:
                      name: "service-a-svc-http-route"
                      virtual_hosts:
                        -
                          name: "service-a-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "service_a"
                    http_filters:
                      -
                        name: "envoy.router"

        -
          name: "service-b-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8280
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "egress"
                    codec_type: "AUTO"
                    route_config:
                      name: "service-b-svc-http-route"
                      virtual_hosts:
                        -
                          name: "service-b-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "service_b"
                    http_filters:
                      -
                        name: "envoy.router"                                
      clusters:
          -
            name: "master"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "master-service"
                  port_value: 8080
          -
            name: "service_a"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "servicea"
                  port_value: 8789  
          -
            name: "service_b"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "serviceb"
                  port_value: 8789
