ocp-templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-service
  app: master-service
  labels:
    app: master-service
spec:
  clusterIP: None
  ports:
    - name: envoy-master
      port: 9080
      protocol: TCP
      targetPort: 9080
  selector:
    app: master-service
  sessionAffinity: None
  type: ClusterIP
