ocp-templates/service-a-envoy-cfg.yaml
apiVersion: v1
data:
  servicea-envoy-config: |-
    ---
    admin:
      access_log_path: "/tmp/admin_access.log"
      address: 
        socket_address: 
          address: "127.0.0.1"
          port_value: 9901
    static_resources:
      listeners:

        -
          name: "service-a-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8786
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "ingress"
                    codec_type: "AUTO"
                    route_config:
                      name: "service-a-svc-http-route"
                      virtual_hosts:
                        -
                          name: "service-a-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "service_a"
                    http_filters:
                      -
                        name: "envoy.router"
        -
          name: "service-b-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8788
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "egress"
                    codec_type: "AUTO"
                    route_config:
                      name: "service-b-svc-http-route"
                      virtual_hosts:
                        -
                          name: "service-b-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "service_b"
                    http_filters:
                      -
                        name: "envoy.router"

        -
          name: "service-c-svc-http-listener"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8791
          filter_chains:
            -
              filters:
                -
                  name: "envoy.http_connection_manager"
                  config:
                    stat_prefix: "egress"
                    codec_type: "AUTO"
                    route_config:
                      name: "service-b-svc-http-route"
                      virtual_hosts:
                        -
                          name: "service-b-svc-http-route"
                          domains:
                            - "*"
                          routes:
                            -
                              match:
                                prefix: "/"
                              route:
                                cluster: "service_c"
                    http_filters:
                      -
                        name: "envoy.router"                                
      clusters:
          -
            name: "service_a"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "localhost"
                  port_value: 8081  
          -
            name: "service_b"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "serviceb"
                  port_value: 8789

          -
            name: "service_c"
            connect_timeout: "0.25s"
            type: "strict_dns"
            lb_policy: "ROUND_ROBIN"
            hosts:
              -
                socket_address:
                  address: "servicec"
                  port_value: 8790
kind: ConfigMap
metadata:
  creationTimestamp: '2019-06-17T12:46:29Z'
  name: servicea-sidecar-config
  namespace: lsm-envoy
  resourceVersion: '69740'
  selfLink: /api/v1/namespaces/lsm-envoy/configmaps/servicea-sidecar-config
  uid: ed96098d-90fd-11e9-96cf-8ebdeddd2f70
