ocp-templates/service-a-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea
  app: service-a
  labels:
    app: service-a
spec:
  clusterIP: None
  ports:
    - name: envoy-web
      port: 8789
      protocol: TCP
      targetPort: 8789
  selector:
    app: service-a
  sessionAffinity: None
  type: ClusterIP
