ocp-templates/service-b-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: service-b
  app: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    app: service-b
    deploymentconfig: service-b
  strategy:
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        app: service-b
        deploymentconfig: service-b
    spec:
      containers:
        - name: service-b
          env:
            - name: server.port
              value: "8080"
            - name: serviceid
              value: "Service-B"
          image: demoservice:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1     
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          - containerPort: 9779
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        - name: envoy-sidecar
          args:
            - '-c'
            - /etc/envoy-config/config.yaml
            - '-l'
            - debug
            - '--service-cluster'
            - service_b
            - '--service-node'
            - service_b
            - '--log-format'
            - '[METADATA][%Y-%m-%d %T.%e][%t][%l][%n] %v'
          command:
            - /usr/local/bin/envoy
          image: 'envoyproxy/envoy:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 9901
              name: envoy-admin
              protocol: TCP
            - containerPort: 8789
              name: envoy-web
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/envoy-config/
              name: envoy-config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: envoy-config-volume
          configMap:
            name: serviceb-sidecar-config
            defaultMode: 420
            items:
              - key: serviceb-envoy-config
                path: config.yaml
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
        - service-b
      from:
        kind: ImageStreamTag
        name: demoservice:latest
    type: ImageChange
