ocp-templates/service-b-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceb
  app: service-b
  labels:
    app: service-b
spec:
  clusterIP: None
  ports:
    - name: envoy-web
      port: 8789
      protocol: TCP
      targetPort: 8789
  selector:
    app: service-b
  sessionAffinity: None
  type: ClusterIP
